#==============================================================
#
#  Name: RELEASE_NOTES
#
#  Rem:  This files describes release notes for 
#        the FastFeedback IOC Application.        
#
#  Auth: 19-May-2015, L. Piccoli         (lpiccoli)
#
#==============================================================
#

FastFeedback: Initial import, based on FFController-R1-19-1




			