@@ -5,7 +5,7 @@ include $(TOP)/configure/CONFIG
 
 #----------------------------------------------------
 #  Optimization of db files using dbst (DEFAULT: NO)
-#DB_OPT = YES
+DB_OPT = YES
 
 #----------------------------------------------------
 # Create and install (or just install)
@@ -17,12 +17,12 @@ include $(TOP)/configure/CONFIG
 # the iocs
 
 #include evr substitutions file
-#DB += IOC-SYS0-FB01.template
-#DB += IOC-SYS0-FB02.template
-#DB += IOC-SYS0-FB03.template
-#DB += IOC-SYS0-FB04.template
-#DB += IOC-SYS0-FB05.template
-#DB += IOC-SYS0-FB10.template
+DB += IOC-SYS0-FB01.template
+DB += IOC-SYS0-FB02.template
+DB += IOC-SYS0-FB03.template
+DB += IOC-SYS0-FB04.template
+DB += IOC-SYS0-FB05.template
+DB += IOC-SYS0-FB10.template
 
 #now include overall substitution file template
 #DB += fbckFB10.template
@@ -31,13 +31,6 @@ include $(TOP)/configure/CONFIG
 #DB += fbckFB03.template
 #DB += fbckFB02.template
 #DB += fbckFB01.template
-
-# trigger
-DB += IOC-SYS0-FB01trig.db
-DB += IOC-SYS0-FB02trig.db
-DB += IOC-SYS0-FB03trig.db
-DB += IOC-SYS0-FB04trig.db
-DB += IOC-SYS0-FB05trig.db
 
 DB_INSTALLS += $(IOCADMIN)/db/iocAdminSoft.db 
 IOCRELEASE_DB += iocRelease.db
@@ -55,4 +48,5 @@ DB_INSTALLS += $(AUTOSAVE)/db/save_restoreStatus.db
 include $(TOP)/configure/RULES
 #----------------------------------------
 #  ADD RULES AFTER THIS LINE
+include $(TOP)/configure/RULES.Db
 
